feat: complete api docs
