# cmd/api/auth.go
@@ -25,6 +25,16 @@ type loginResponse struct {
 	Token string `json:"token"`
 }
 
+// Login		logs in a user
+//
+// @Summary 		logs in a user
+// @Description	logs in a user
+// @Tags 			auth
+// @Accept 		json
+// @Produce 		json
+// @Param			user body	loginRequest true	"User"
+// @Success 		200 {object} loginResponse
+// @Router 		/api/v1/auth/login [post]
 func (app *application) login(c *gin.Context) {
 
 	var auth loginRequest
@@ -68,6 +78,16 @@ func (app *application) login(c *gin.Context) {
 
 }
 
+// Register			registers a new user
+//
+// @Summary			registers a new user
+// @Description		registers a new user
+// @Tags 			auth
+// @Accept			json
+// @Produce 		json
+// @Param			user body	registerRequest true	"User"
+// @Success 		201 {object} database.User
+// @Router 			/api/v1/auth/register [post]
 func (app *application) registerUser(c *gin.Context) {
 	var register registerRequest
 
