# cmd/api/routes.go
@@ -14,11 +14,7 @@ func (app *application) routes() http.Handler {
 
 	v1 := g.Group("/api/v1")
 	{
-		v1.GET("/events", app.getAllEvents)
-		v1.GET("/events/:id", app.getEvent)
 
-		v1.GET("/events/:id/attendees", app.getAttendeesForEvent)
-		v1.GET("/attendees/:id/events", app.getEventsByAttendee)
 		v1.POST("/auth/register", app.registerUser)
 		v1.POST("/auth/login", app.login)
 	}
@@ -26,6 +22,12 @@ func (app *application) routes() http.Handler {
 	authGroup := v1.Group("/")
 	authGroup.Use(app.AuthMiddleware())
 	{
+		authGroup.GET("/events", app.getAllEvents)
+		authGroup.GET("/events/:id", app.getEvent)
+
+		authGroup.GET("/events/:id/attendees", app.getAttendeesForEvent)
+		authGroup.GET("/attendees/:id/events", app.getEventsByAttendee)
+
 		authGroup.POST("/events", app.createEvent)
 		authGroup.PUT("/events/:id", app.updateEvent)
 		authGroup.DELETE("/events/:id", app.deleteEvent)
